--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 <p>In his New York Times bestselling novel, David Levithan introduces readers to what Entertainment Weekly calls a “wise, wildly unique” love story about A, a teen who wakes up every morning in a different body, living a different life.</p>
                 <p>There’s never any warning about where it will be or who it will be. A has made peace with that, even established guidelines by which to live: Never get too attached. Avoid being noticed. Do not interfere. It’s all fine until the morning that A wakes up in the body of Justin and meets Justin’s girlfriend, Rhiannon. From that moment, the rules by which A has been living no longer apply. Because finally A has found someone he wants to be with—day in, day out, day after day.</p>
                 <p>With his new novel, David Levithan, bestselling co-author of Will Grayson, Will Grayson, and Nick and Norah’s Infinite Playlist, has pushed himself to new creative heights. He has written a captivating story that will fascinate readers as they begin to comprehend the complexities of life and love in A’s world, as A and Rhiannon seek to discover if you can truly love someone who is destined to change every day.</p>
+                <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
             </div>
         </div>
     </section>
